@@ -7,6 +7,32 @@ project.ext.assetsDir = new File("../assets")
 
 import org.gradle.internal.os.OperatingSystem
 
+def osName = System.getProperty('os.name').toLowerCase(Locale.ROOT)
+
+// creates a slim JDK runtime for distribution
+task createRuntime(type: Exec) {
+    doFirst() {
+        project.delete("${buildDir}/runtime")
+    }
+    String runtimePath = "${buildDir}/runtime"
+
+    workingDir project.projectDir
+    commandLine = [
+            "jlink",
+            '-p', "jmods",
+            '--add-modules', 'java.base,java.desktop,jdk.unsupported',
+            '--strip-debug',
+            '--no-header-files',
+            '--no-man-pages',
+            '--strip-native-commands',
+            "--vm=server",
+            "--compress=2",
+            '--output', runtimePath
+    ]
+}
+
+
+
 task run(dependsOn: classes, type: JavaExec) {
     mainClass = project.mainClassName
     classpath = sourceSets.main.runtimeClasspath
@@ -43,5 +69,39 @@ task dist(type: Jar) {
 
 
 dist.dependsOn classes
+
+// creates application bundle (executable + runtime)
+task jpackage(type: Exec, dependsOn: dist) {
+    doFirst() {
+        project.delete("${buildDir}/distribution/$project.appName")
+    }
+    dependsOn createRuntime
+    workingDir project.projectDir
+    def commands = [
+            "jpackage",
+            '--input', "${buildDir}/libs",
+            '--name', project.appName,
+            '--main-class', project.mainClassName,
+            '--main-jar', jar.archiveFile.get().asFile.getName(),
+            '--runtime-image', "${buildDir}/runtime",
+            '--output', "${buildDir}/distribution"
+    ]
+
+    if (osName.contains('windows')) {
+        commands << '--java-options'
+    } else if (osName.contains('linux')) {
+        commands << '--icon'
+        commands << "${project.projectDir}/logo.png"
+        commands << '--java-options'
+        commands << "-splash:splash.png"
+    } else if (osName.contains('mac')) {
+        commands << '--icon'
+        commands << "${project.projectDir}/logo.icns"
+        commands << '--java-options'
+        commands << "-XstartOnFirstThread"
+    }
+
+    commandLine = commands
+}
 
 eclipse.project.name = appName + "-desktop"
